## Process this file with automake to produce Makefile.in

libmem_a_SOURCES = \
	MemPool.c \
	MemStr.c \
	String.c \
	StrList.c \
	wordlist.c \
	intlist.c \
	MemBufs.c \
	Vector.c \
	MemBuf.c

libmem_a_LIBADD = \
	MemPool.o \
	MemStr.o \
	String.o \
	StrList.o \
	wordlist.o \
	intlist.o \
	MemBufs.o \
	Vector.o \
	MemBuf.o

noinst_LIBRARIES = \
	libmem.a
