## Process this file with automake to produce Makefile.in

libmem_a_SOURCES = \
	MemPool.c \
	MemStr.c \
	String.c \
	wordlist.c \
	intlist.c \
	MemBufs.c \
	MemBuf.c

libmem_a_LIBADD = \
	MemPool.o \
	MemStr.o \
	String.o \
	wordlist.o \
	intlist.o \
	MemBufs.o \
	MemBuf.o

noinst_LIBRARIES = \
	libmem.a
