## Process this file with automake to produce Makefile.in

libcore_a_SOURCES = \
	dlink.c \
	ctx.c \
	debug.c \
	syslog_ntoa.c \
	gb.c \
	tools.c \
	fifo.c \
	kb.c

libcore_a_LIBADD = \
	dlink.o \
	ctx.o \
	debug.o \
	syslog_ntoa.o \
	gb.o \
	tools.o \
	fifo.o \
	kb.o

noinst_LIBRARIES = \
	libcore.a
